--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>::: wikstrom.in :::</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -15,14 +15,14 @@
       <li class="name">
         <h1>
           <a href="#">
-            Top Bar Title
+            wikstrom.in
           </a>
         </h1>
       </li>
       <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
     </ul>
  
-    <section class="top-bar-section">
+    <!--<section class="top-bar-section">
        
       <ul class="right">
         <li class="divider"></li>
@@ -66,7 +66,7 @@
           </ul>
         </li>
       </ul>
-    </section>
+    </section>-->
   </nav>
  
    
@@ -105,7 +105,7 @@
       </div>
     </div>
  
-    <div class="large-9 columns">
+    <!--<div class="large-9 columns">
       <div class="panel">
         <div class="row">
  
@@ -157,7 +157,7 @@
             <img src="http://placehold.it/600x500&text=Thumbnail">
           </div>
         </div>
-      </div>
+      </div>-->
  
       <div class="row">
         <div class="large-6 columns">
@@ -186,7 +186,7 @@
   <div class="large-12 columns"><hr/>
       <div class="row">
  
-        <div class="large-6 columns">
+        <!--<div class="large-6 columns">
             <p>© Copyright no one at all. Go to town.</p>
         </div>
  
@@ -197,7 +197,7 @@
               <li><a href="#">Link 3</a></li>
               <li><a href="#">Link 4</a></li>
             </ul>
-        </div>
+        </div>-->
  
       </div>
   </div>
