Changed api url

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         var temps = [];
 
         $.ajax({
-          url: "http://aepi.homeserver.com",
+          url: "http://api.wikstrom.in",
           dataType: "json",
           success: function(data) {
 
